--- a/Examples/src/HeatExchange/parameters.pot
+++ b/Examples/src/HeatExchange/parameters.pot
@@ -4,6 +4,8 @@ MMAX=501
 itermax=1000000
 # Tolerance for stopping criterion
 toler=1.0e-8
+# Norm used to computed the increment (1 for L2 norm, 0 for H1 norm)
+useL2norm=0
 # Bar length
 L=40.
 # First longitudinal dimension
@@ -20,3 +22,5 @@ k=0.164
 hc=200.0e-6
 # Number of elements
 M=11
+# Name of the output
+outname=result.dat
